Big Update: Hoàn thiện các chức năng: Next/prev, random,repeat, rotateCD, co dãn CD, auto play Chưa fix đc bug: CD vẫn quay khi pause, setLocalStorage chậm Chưa làm chức năng: volume, scrollIntoView

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,22 +10,10 @@
   width: 480px;
 }
 
-.player .icon-pause {
-  display: none;
-}
-
-.player.playing .icon-pause {
-  display: inline-block;
-}
-
-.player.playing .icon-play {
-  display: none;
-}
-
 .song.active .option,
 .song.active .author,
 .song.active .title {
-  color: #fff;
+  color: #fff !important;
 }
 
 .icon:not(.icon-play, .icon-pause) {
