--- a/src/components/DashBoard/DashBoard.scss
+++ b/src/components/DashBoard/DashBoard.scss
@@ -6,6 +6,7 @@
     width: 100%;
     max-width: 480px;
     border-bottom: 1px solid #ebebeb;
+    z-index: 1;
     header {
       text-align: center;
       margin-bottom: 12px;
@@ -30,6 +31,7 @@
         background-color: #333;
         background-size: cover;
         margin: auto;
+        background-position: center;
       }
     }
     .control {
