--- a/src/components/DashBoard/DashBoard.scss
+++ b/src/components/DashBoard/DashBoard.scss
@@ -1,82 +1,95 @@
 .dashboard {
-    padding: 16px;
-    background-color: #fff;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    max-width: 480px;
-    border-bottom: 1px solid #ebebeb;
-    z-index: 1;
-    header {
-      text-align: center;
-      margin-bottom: 12px;
-      h4 {
-        color: var(--primary-color);
-        font-size: 14px;
-        margin-bottom: 4px;
-      }
-      h2 {
-        color: var(--text-color);
-        font-size: 24px;
-      }
+  padding: 16px;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  max-width: 480px;
+  border-bottom: 1px solid #ebebeb;
+  z-index: 1;
+  header {
+    text-align: center;
+    margin-bottom: 12px;
+    h4 {
+      color: var(--primary-color);
+      font-size: 14px;
+      margin-bottom: 10px;
     }
-    .cd {
-      display: flex;
-      margin: auto;
-      width: 200px;
-      .cd-thumb {
-        width: 100%;
-        padding-top: 100%;
-        border-radius: 50%;
-        background-color: #333;
-        background-size: cover;
-        margin: auto;
-        background-position: center;
-      }
-    }
-    .control {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      padding: 20px 0 10px 0;
-      .btn {
-        color: #666;
-        padding: 18px;
-        font-size: 18px;
-        cursor: pointer;
-        &.active {
-          color: var(--primary-color);
-        }
-      }
-      .btn-toggle-play {
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        font-size: 24px;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--primary-color);
-      }
-      
-    }
-    .progress {
-      width: 100%;
-      -webkit-appearance: none;
-      height: 6px;
-      background: #d3d3d3;
-      outline: none;
-      opacity: 0.7;
-      -webkit-transition: 0.2s;
-      transition: opacity 0.2s;
-      &::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 12px;
-        height: 6px;
-        background-color: var(--primary-color);
-        cursor: pointer;
-      }
+    h2 {
+      color: var(--text-color);
+      font-size: 24px;
+      min-height: 48px;
     }
   }
+  .cd {
+    display: flex;
+    margin: auto;
+    width: 200px;
+    .cd-thumb {
+      width: 100%;
+      padding-top: 100%;
+      border-radius: 50%;
+      background-color: #333;
+      background-size: cover;
+      margin: auto;
+      background-position: center;
+    }
+  }
+  .control {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px 0 10px 0;
+    .btn {
+      color: #666;
+      padding: 18px;
+      font-size: 18px;
+      cursor: pointer;
+      &.active {
+        color: var(--primary-color);
+      }
+    }
+    .btn-toggle-play {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      font-size: 24px;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: var(--primary-color);
+    }
+  }
+  .progress {
+    width: 100%;
+    -webkit-appearance: none;
+    height: 6px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 12px;
+      height: 6px;
+      background-color: var(--primary-color);
+      cursor: pointer;
+    }
+  }
+}
+
+
+@keyframes spin {
+  100% { 
+    -webkit-transform: rotate(360deg); 
+    transform:rotate(360deg); 
+} 
+}
+.rotate {
+  -webkit-animation:spin 3s linear infinite;
+    -moz-animation:spin 3s linear infinite;
+    animation:spin 3s linear infinite;
+}
