--- a/src/components/DashBoard/DashBoard.scss
+++ b/src/components/DashBoard/DashBoard.scss
@@ -1,12 +1,13 @@
 .dashboard {
-  padding: 16px;
+  padding: 16px 16px 14px;
   background-color: #fff;
   position: fixed;
   top: 0;
   width: 100%;
   max-width: 480px;
   border-bottom: 1px solid #ebebeb;
-  z-index: 1;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   header {
     text-align: center;
     margin-bottom: 12px;
@@ -14,17 +15,20 @@
       color: var(--primary-color);
       font-size: 14px;
       margin-bottom: 10px;
+      font-weight: 700;
     }
     h2 {
       color: var(--text-color);
       font-size: 24px;
       min-height: 48px;
+      line-height: 1.2;
     }
   }
   .cd {
     display: flex;
     margin: auto;
     width: 200px;
+    transition: opacity .2s;
     .cd-thumb {
       width: 100%;
       padding-top: 100%;
@@ -39,57 +43,45 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 20px 0 10px 0;
+    padding: 16px 0 8px 0;
     .btn {
       color: #666;
-      padding: 18px;
-      font-size: 18px;
+      padding: 12px;
+      font-size: 22px;
       cursor: pointer;
       &.active {
         color: var(--primary-color);
       }
     }
     .btn-toggle-play {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      font-size: 24px;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: var(--primary-color);
+      width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    font-size: 24px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
     }
   }
   .progress {
+    position: relative;
     width: 100%;
     -webkit-appearance: none;
     height: 6px;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
-    -webkit-transition: 0.2s;
-    transition: opacity 0.2s;
+    border-radius: 4px;
     &::-webkit-slider-thumb {
-      -webkit-appearance: none;
+      -webkit-appearance:none;
       appearance: none;
-      width: 12px;
-      height: 6px;
+      height: 10px;
+      width: 10px;
       background-color: var(--primary-color);
       cursor: pointer;
+      border-radius: 50%;
     }
   }
-}
-
-
-@keyframes spin {
-  100% { 
-    -webkit-transform: rotate(360deg); 
-    transform:rotate(360deg); 
-} 
-}
-.rotate {
-  -webkit-animation:spin 3s linear infinite;
-    -moz-animation:spin 3s linear infinite;
-    animation:spin 3s linear infinite;
 }
