--- a/src/components/PlayList/PlayList.scss
+++ b/src/components/PlayList/PlayList.scss
@@ -1,6 +1,6 @@
 @import '../../App.scss';
 .playlist {
-  margin-top: 440px;
+  margin-top: 444px;
   padding: 12px;
   width: 100%;
   .song {
@@ -9,8 +9,8 @@
     margin-bottom: 12px;
     background-color: #fff;
     padding: 12px 16px;
-    border-radius: 5px;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    box-shadow: 0 2px 3px rgb(0 0 0 / 10%);
     cursor: pointer;
     &.active {
       background-color: var(--primary-color);
@@ -23,13 +23,14 @@
       height: 44px;
       border-radius: 50%;
       background-size: cover;
+      background-position: center;
       margin: 0 8px;
     }
     .body {
       flex: 1;
       padding: 0 16px;
       .title {
-        font-size: 20px;
+        font-size: 18px;
         text-transform:lowercase;
         color: var(--text-color);
         &:first-letter {
@@ -42,9 +43,9 @@
       }
     }
     .option {
-      padding: 16px 8px;
+      padding: 12px 6px;
       color: #999;
-      font-size: 18px;
+      font-size: 24px;
     }
   }
 }
