--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 body {
   background-color: #f5f5f5;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  height: 100vh;
+  line-height: 22px;
+  background: linear-gradient(-45deg,#ee7752,rgb(255, 238, 222),#23a6d5,#23d5ab);
 }
